--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-jest": "^30.0.5",
+    "eslint": "9.33.0",
+    "eslint-config-next": "15.4.7",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "tailwindcss": "^4",
