--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-empty-object-type": "off",
+    "react/no-unescaped-entities": "off"
+  }
 }
