--- a/package.json
+++ b/package.json
@@ -11,43 +11,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.7",
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@upstash/redis": "^1.35.3",
-    "@vercel/og": "^0.8.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.539.0",
-    "mdast-util-from-markdown": "^2.0.2",
     "next": "15.4.6",
-    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.1",
-    "remark-parse": "^11.0.0",
-    "satori": "^0.16.2",
-    "unified": "^11.0.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.3",
     "@tailwindcss/postcss": "^4",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "babel-jest": "^30.0.5",
     "eslint": "9.33.0",
     "eslint-config-next": "15.4.7",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
     "tailwindcss": "^4",
-    "ts-jest": "^29.4.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
